Change data directory from 'data/' to '_data/'
- Updated all config.yaml files to use '_data' directory
- Updated all viewer.html files to fetch from '_data/entities.json'
- Renamed example data directory from 'data' to '_data'
- Updated .gitignore to exclude '_data/' instead of 'data/'
- Ensures consistency across all templates and examples
- Underscore prefix helps distinguish from other directories

--- a/examples/systems-map-example/config.yaml
+++ b/examples/systems-map-example/config.yaml
@@ -147,7 +147,7 @@ relationships:
 
 # File paths
 paths:
-  data_dir: "./data"
+  data_dir: "./_data"
   entities_file: "entities.json"
   document_dir: "./system_docs"
   output_dir: "./output"
