--- a/templates/generic/config.yaml
+++ b/templates/generic/config.yaml
@@ -120,7 +120,7 @@ relationships:
 
 # File paths
 paths:
-  data_dir: "./data"
+  data_dir: "./_data"
   entities_file: "entities.json"
   document_dir: "./docs"
   output_dir: "./output"
