--- a/templates/ecosystem/config.yaml
+++ b/templates/ecosystem/config.yaml
@@ -173,7 +173,7 @@ relationships:
 
 # File paths
 paths:
-  data_dir: "./data"
+  data_dir: "./_data"
   entities_file: "entities.json"
   document_dir: "./insights"
   output_dir: "./output"
