--- a/templates/research/config.yaml
+++ b/templates/research/config.yaml
@@ -134,7 +134,7 @@ relationships:
 
 # File paths
 paths:
-  data_dir: "./data"
+  data_dir: "./_data"
   entities_file: "entities.json"
   document_dir: "./papers"
   output_dir: "./output"
